Add ChipperCash work page and navigation improvements - New ChipperCash page with 4 project sections - Updated navigation to link to ChipperCash page - Added logo home link across all pages - Enhanced CSS for work page styling and active navigation states

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <!-- Fixed Navigation Sidebar -->
             <nav class="nav-sidebar">
                 <div class="logo">
-                    <h1>Thelma Dike</h1>
+                    <h1><a href="index.html">Thelma Dike</a></h1>
                 </div>
                 
                 <div class="nav-section">
                     <h3 class="section-title">Work</h3>
                     <ul class="nav-links">
-                        <li><a href="#">Chipper Cash</a></li>
+                        <li><a href="chipper-cash.html">Chipper Cash</a></li>
                         <li><a href="#">Monks</a></li>
                         <li><a href="#">RXGO</a></li>
                         <li><a href="#">Softcom</a></li>
