Add Softcom work page and update navigation across all pages

--- a/chipper-cash.html
+++ b/chipper-cash.html
@@ -25,9 +25,9 @@
                             </div>
                             <a href="chipper-cash.html" class="active-link">Chipper Cash</a>
                         </li>
-                        <li><a href="#">Monks</a></li>
-                        <li><a href="#">RXGO</a></li>
-                        <li><a href="#">Softcom</a></li>
+                        <li><a href="work-monks.html">Monks</a></li>
+                        <li><a href="work-rxgo.html">RXGO</a></li>
+                        <li><a href="work-softcom.html">Softcom</a></li>
                     </ul>
                 </div>
                 
@@ -65,9 +65,9 @@
                             <li class="mobile-nav-active">
                                 <a href="chipper-cash.html">Chipper Cash</a>
                             </li>
-                            <li><a href="#">Monks</a></li>
-                            <li><a href="#">RXGO</a></li>
-                            <li><a href="#">Softcom</a></li>
+                            <li><a href="work-monks.html">Monks</a></li>
+                            <li><a href="work-rxgo.html">RXGO</a></li>
+                            <li><a href="work-softcom.html">Softcom</a></li>
                         </ul>
                     </div>
                     
