--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <h3 class="section-title">Work</h3>
                     <ul class="nav-links">
                         <li><a href="chipper-cash.html">Chipper Cash</a></li>
-                        <li><a href="#">Monks</a></li>
-                        <li><a href="#">RXGO</a></li>
-                        <li><a href="#">Softcom</a></li>
+                        <li><a href="work-monks.html">Monks</a></li>
+                        <li><a href="work-rxgo.html">RXGO</a></li>
+                        <li><a href="work-softcom.html">Softcom</a></li>
                     </ul>
                 </div>
                 
@@ -58,9 +58,9 @@
                         <h3>Work</h3>
                         <ul>
                             <li><a href="chipper-cash.html">Chipper Cash</a></li>
-                            <li><a href="#">Monks</a></li>
-                            <li><a href="#">RXGO</a></li>
-                            <li><a href="#">Softcom</a></li>
+                            <li><a href="work-monks.html">Monks</a></li>
+                            <li><a href="work-rxgo.html">RXGO</a></li>
+                            <li><a href="work-softcom.html">Softcom</a></li>
                         </ul>
                     </div>
                     
