--- a/work-rxgo.html
+++ b/work-rxgo.html
@@ -104,7 +104,7 @@
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-image">
-                                <img src="http://localhost:3845/assets/3c1909b274a693e37cf6fe25a97a210fe0d69e5f.png" alt="RXGO App Screenshot 1">
+                                <img src="assets/rxgo-main.png" alt="RXGO App Screenshot 1">
                             </div>
                             
                             <div class="project-text">
@@ -123,7 +123,7 @@
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-image">
-                                <img src="http://localhost:3845/assets/248e32a048a2ebf10583bdf20c9b542fc8168be9.png" alt="RXGO App Screenshot 2">
+                                <img src="assets/rxgo-sub1.png" alt="RXGO App Screenshot 2">
                             </div>
                             
                             <div class="project-text">
