changes to index page

--- a/chipper-cash.html
+++ b/chipper-cash.html
@@ -20,10 +20,7 @@
                     <h3 class="section-title">Work</h3>
                     <ul class="nav-links">
                         <li class="nav-active">
-                            <div class="nav-active-indicator">
-                                <img src="http://localhost:3845/assets/45623b36ba1fe32c22ac0b7a0af0b36e0dba7ef2.svg" alt="Active indicator">
-                            </div>
-                            <a href="chipper-cash.html" class="active-link">Chipper Cash</a>
+                            <a href="chipper-cash.html">Chipper Cash</a>
                         </li>
                         <li><a href="work-monks.html">Monks</a></li>
                         <li><a href="work-rxgo.html">RXGO</a></li>
