--- a/index.html
+++ b/index.html
@@ -135,14 +135,16 @@
                         
                         <p class="bio">
                             I'm a firm believer in the power of sharing knowledge. I do this either through 
-                            <a href="https://speakerdeck.com/dikethelmak" target="_blank" class="billions-link">talks</a> long-form thoughts on 
+                            <a href="https://speakerdeck.com/dikethelmak" target="_blank" class="billions-link">talks</a>, long-form thoughts on 
                             <a href="https://thelmadike.substack.com" target="_blank" class="billions-link">Substack</a> and
                             <a href="https://medium.com/@dikethelmak" target="_blank" class="billions-link">Medium</a>, or 
                             <a href="https://calendar.app.google/c29czZKQ2RSDxDKd9" target="_blank" class="billions-link">one-on-one coaching sessions</a> with designers.
                         </p>
                     </div>
                 </div>
+
             </main>
+            
         </div>
     </div>
     <script src="script.js"></script>
