necessary case study images

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
                 <div class="nav-section">
                     <h3 class="section-title">Contact</h3>
                     <ul class="nav-links">
-                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
-                        <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
+                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                         <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
-                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
+                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                     </ul>
+                    <p class="case-studies-note">For full case studies, reach out via <a href="mailto:dikethelma55@gmail.com" class="case-studies-email">email</a></p>
                 </div>
             </nav>
             
@@ -126,8 +127,8 @@
                             When I am not buried in design work, I am probably at the gym chasing my next PR, getting lost in the streets of new cities and countries, or hunting down the coziest cafes I can find. 
                         </p>
                         <p class="bio">
-                            Lately, my evenings have been spent unraveling the intricate power plays in
-                            <a href="https://www.showmax.com/ng/stream/series/billions/98081da2-e6bf-38da-aebc-296fb5ef430f" target="_blank" class="billions-link">Billions.</a>
+                            Lately, my evenings have been spent unraveling the startup chaos and tech drama in
+                            <a href="https://www.imdb.com/title/tt2575988/" target="_blank" class="billions-link">Silicon Valley.</a>
                             I also love a good story in the form of 
                             <a href="https://www.goodreads.com/user/show/125512952-thelma-dike" target="_blank" class="billions-link">books</a>
                             especially when it's about design or finance or from the rich tapestry of African literature.
