--- a/work-monks.html
+++ b/work-monks.html
@@ -31,11 +31,12 @@
                 <div class="nav-section">
                     <h3 class="section-title">Contact</h3>
                     <ul class="nav-links">
-                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
-                        <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
+                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                         <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
-                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
+                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                     </ul>
+                    <p class="case-studies-note">For full case studies, reach out via <a href="mailto:dikethelma55@gmail.com" class="case-studies-email">email</a></p>
                 </div>
             </nav>
             
@@ -69,10 +70,10 @@
                     <div class="mobile-nav-section">
                         <h3>Contact</h3>
                         <ul>
-                            <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
+                            <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                            <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                             <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
-                            <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
+                            <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,16 +93,22 @@
                             Their clients include Google, Meta, Amazon, Walmart, etc
                         </p>
                         <p class="project-description">
-                            In a hybrid consultant/designer role, I worked directly with clients at Apple, Verizon and Equifax to
+                            In a hybrid consultant/designer role, I worked directly with clients at Fortune 500, Verizon and Equifax to
                             gather requirements and create designs that redefined their goals.
                         </p>
+                        <div class="project-link">
+                            <a href="https://www.monks.com/" target="_blank" rel="noopener noreferrer" class="link-text">Visit Site</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                            </svg>
+                        </div>
                     </div>
 
-                    <!-- Apple Project -->
+                    <!-- Fortune 500 Project -->
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-heading">
-                                <h3>Apple - Battery intelligence</h3>
+                                <h3>Fortune 500 - Battery intelligence</h3>
                                 <div class="underline">
                                     <img src="http://localhost:3845/assets/d75d36230ba067897b231ea0a0c02647d3c29014.svg" alt="Underline">
                                 </div>
@@ -110,37 +117,39 @@
                             <div class="divider"></div>
                             <div class="project-image">
                                 <div class="placeholder-image">
-                                    <div class="placeholder-content">Apple Battery Intelligence Image</div>
+                                    <img src="assets/bdms.webp" alt="Battery Intelligence">
                                 </div>
                             </div>
                             <div class="project-text">
                                 <p>
-                                    As the sole designer on a 3-year project for a Fortune 500 client, I led the UX redesign of BDMS, an internal tool for monitoring and analyzing battery performance.
+                                    As the sole designer on a 3-year project for a Fortune 500 client, I led the UX redesign of BDMS, an internal tool for requesting, monitoring and analyzing battery performance tests.
                                 </p>
                                 <p>
                                     At the beginning of the project, we weren't allowed to speak to users, and early designs were based solely on internal assumptions and client knowledge of the tool.
                                 </p>
                                 <p>
-                                    When we released some key features, I recognized the impact of this and pushed for a full discovery
+                                    When we released some key features, I recognized the impact of this and led a full discovery
                                     phase; conducting interviews, remote shadowing, knowledge sharing sessions and workshops to map the
                                     end-to-end battery testing workflow.
                                 </p>
                                 <p>
-                                    This led to a better understanding of our users and how they used the tool in their work. It also influenced how the client worked internally, other PMs within the product adopted our approach, and the client trusted the creation of a Battery Process Map, which aligned stakeholders, uncovered critical gaps, and restored trust in the design process. The redesigned system helped streamline fragmented workflows, simplified test setup, and made complex data easier to interpret.
+                                    This led to a better understanding of our users and how they used the tool in their work. It also influenced how the client worked internally, other PMs within the product adopted our approach. We created a Battery Process Map, which aligned stakeholders, and uncovered some gaps. The redesigned system helped streamline workflows, simplify battery test setup, and made complex data easier to interpret.
                                 </p>
                                 <p>
-                                    The impact: engineers saved hundreds of hours annually, confidence and productivity improved, and
-                                    the team delivered a scalable foundation for future innovation.
+                                    The impact: battery cell and testengineers saved hundreds of hours annually, boosting confidence and productivity.
+                                    The team also delivered a scalable foundation for future innovation.
                                 </p>
                                 <p>
                                     One engineer summed it up best:
                                     <br>
-                                    "The changes to the cloning interface cut my setup time in half."
+                                    "The changes to the cloning interface(a step in battery test creation) cut my setup time in half."
                                 </p>
                             </div>
                             <div class="project-link">
-                                <a href="#" class="link-text">Read More</a>
-                                <img src="http://localhost:3845/assets/eef21833aed337afe00b6bb16d0e68de171f8a1c.svg" alt="Arrow right" class="arrow-icon">
+                                <a href="#" target="_blank" class="link-text">Read More</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                                </svg>
                             </div>
                         </div>
                     </div>
@@ -158,38 +167,37 @@
                             <div class="divider"></div>
                             <div class="project-image">
                                 <div class="placeholder-image">
-                                    <div class="placeholder-content">Verizon Resource Management Image</div>
+                                    <img src="assets/verizon.png" alt="Verizon">
                                 </div>
                             </div>
                             <div class="project-text">
                                 <p>
-                                    As the sole designer on a 3-year project for a Fortune 500 client, I led the UX redesign of BDMS, an internal tool for monitoring and analyzing battery performance.
+                                    As part of a Verizon–NVIDIA–Monks initiative, I joined as the sole designer on a 12-week sprint to shape Ceres, a next-gen platform for deploying AI media apps on private 5G. The infrastructure was built, but my role was to make it usable for creative partners without DevOps backgrounds.
                                 </p>
                                 <p>
-                                    Initially, we weren't allowed to speak to users, and early designs—based solely on internal assumptions—failed to gain traction.
-                                </p>
-                                <p>
-                                    I recognized the disconnect and pushed for a full discovery phase, conducting interviews, remote
-                                    shadowing, and workshops to map the end-to-end testing workflow.
-                                </p>
-                                <p>
-                                    This research led to the creation of a Battery Process Map, which aligned stakeholders, uncovered
-                                    critical gaps, and restored trust in the design process. The redesigned system helped streamline
-                                    fragmented workflows, simplified test setup, and made complex data easier to interpret.
-                                </p>
-                                <p>
-                                    The impact: engineers saved hundreds of hours annually, confidence and productivity improved, and
-                                    the team delivered a scalable foundation for future innovation.
-                                </p>
-                                <p>
-                                    One engineer summed it up best:
+                                    I designed key beta workflows:
                                     <br>
-                                    "The changes to the cloning interface cut my setup time in half."
+                                    → Multi-tenant partner management.
+                                    <br>
+                                    → Tools for partner app deployment and lifecycle management
+                                    <br>
+                                    → Functionality for deploying and controlling sandbox environments
+                                    <br>
+                                    → UI integration of the NVIDIA NIM library to support AI model access
+                                </p>
+                                
+                                <p>
+                                    turning complex infrastructure into accessible tools.
+                                </p>
+                                <p>
+                                    This foundation now powers live AI pipelines and on-site media workflows across Verizon’s private 5G network.
                                 </p>
                             </div>
                             <div class="project-link">
-                                <a href="#" class="link-text">Read More</a>
-                                <img src="http://localhost:3845/assets/eef21833aed337afe00b6bb16d0e68de171f8a1c.svg" alt="Arrow right" class="arrow-icon">
+                                <a href="https://www.verizon.com/about/news/verizon-nvidia-power-ai-workloads-5g-private-networks-mec" target="_blank" class="link-text">Read More</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                                </svg>
                             </div>
                         </div>
                     </div>
