--- a/work-rxgo.html
+++ b/work-rxgo.html
@@ -31,11 +31,12 @@
                 <div class="nav-section">
                     <h3 class="section-title">Contact</h3>
                     <ul class="nav-links">
-                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
-                        <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
+                        <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                        <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                         <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
-                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
+                        <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                     </ul>
+                    <p class="case-studies-note">For full case studies, reach out via <a href="mailto:dikethelma55@gmail.com" class="case-studies-email">email</a></p>
                 </div>
             </nav>
             
@@ -69,10 +70,10 @@
                     <div class="mobile-nav-section">
                         <h3>Contact</h3>
                         <ul>
-                            <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
-                            <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
+                            <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                            <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
                             <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
-                            <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
+                            <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,7 +86,7 @@
                     <div class="project-header">
                         <div class="project-title-row">
                             <h2 class="project-title">RXGO</h2>
-                            <span class="project-period">2022 - 2024</span>
+                            <span class="project-period">2020 - 2022</span>
                         </div>
                         <p class="project-description">
                             A significant challenge for many people is the high cost of prescription drugs.
@@ -95,6 +96,12 @@
                             app that helps Americans save money on their medications. My goal was to distill it into a simple,
                             fast, and helpful mobile app.
                         </p>
+                        <div class="project-link">
+                            <a href="hhttps://apps.apple.com/us/app/rxgo-prescription-rx-coupons/id1533949987" target="_blank" rel="noopener noreferrer" class="link-text">View App</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                            </svg>
+                        </div>
                     </div>
 
                     <!-- Project Images and Content -->
@@ -139,7 +146,7 @@
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-image">
-                                <img src="http://localhost:3845/assets/47c9f497b434349caba6a6f0cb0ebd956fdae7e0.png" alt="RXGO App Screenshot 3">
+                                <img src="assets/rxgo-ratings.png" alt="RXGO App Screenshot 3">
                             </div>
                         </div>
                     </div>
