--- a/chipper-cash.html
+++ b/chipper-cash.html
@@ -6,6 +6,7 @@
     <title>Chipper Cash - Thelma Dike Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
 </head>
 <body>
     <div class="home-container">
