--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     <ul class="nav-links">
                         <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                         <li><a href="https://x.com/dikethelmak" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                        <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
+                        <li><a href="mailto:dikethelma55@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Thelma,%0D%0A%0D%0AI%20came%20across%20your%20portfolio%20and%20would%20like%20to%20connect.%0D%0A%0D%0ABest%20regards,">Email</a></li>
                         <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank" rel="noopener noreferrer">CV</a></li>
                     </ul>
-                    <p class="case-studies-note">For full case studies, reach out via <a href="mailto:dikethelma55@gmail.com" class="case-studies-email">email</a></p>
+                    <p class="case-studies-note">For full case studies, reach out via <a href="mailto:dikethelma55@gmail.com?subject=Full%20Case%20Studies%20Request&body=Hi%20Thelma,%0D%0A%0D%0AI%20would%20like%20to%20see%20your%20full%20case%20studies.%0D%0A%0D%0ABest%20regards," class="case-studies-email">email</a></p>
                 </div>
             </nav>
             
@@ -71,7 +71,7 @@
                         <ul>
                             <li><a href="https://www.linkedin.com/in/dikethelmak/" target="_blank">LinkedIn</a></li>
                             <li><a href="https://x.com/dikethelmak" target="_blank">Twitter</a></li>
-                            <li><a href="mailto:dikethelma55@gmail.com">Email</a></li>
+                            <li><a href="mailto:dikethelma55@gmail.com?subject=Portfolio%20Inquiry&body=Hi%20Thelma,%0D%0A%0D%0AI%20came%20across%20your%20portfolio%20and%20would%20like%20to%20connect.%0D%0A%0D%0ABest%20regards,">Email</a></li>
                             <li><a href="https://docs.google.com/document/d/1TGyf8GdJl9mxwbZwgdkmXhUxz5rMeiR00SjjlziIapI/edit?tab=t.0" target="_blank">CV</a></li>
                         </ul>
                     </div>
