--- a/chipper-cash.html
+++ b/chipper-cash.html
@@ -225,7 +225,7 @@
                             </div>
                             
                             <div class="divider"></div>
-                            <div class="project-image placeholder-image">
+                            <div class="project-image">
                                 <img src="assets/chipperxwu.png" alt="Chipper x WU">
                             </div>
                             <div class="project-text">
