--- a/chipper-cash.html
+++ b/chipper-cash.html
@@ -95,10 +95,10 @@
                             Chipper Cash is a financial technology company that provides cross-border remittance payment solutions across Africa.
                         </p>
                         <p class="project-description">
-                            At Chipper Cash, I worked as a senior product designer and lead a ton of high impact initiatives like the design of the API merchant dashboard, redesign of the Onboarding and verification flows, Zambian Launch in partnership with Western Union, amongst others.
+                            At Chipper Cash, I worked as a senior product designer and lead a ton of high impact initiatives, listed a few below. 
                         </p>
                         <div class="project-link">
-                            <a href="https://chippercash.com" target="_blank" rel="noopener noreferrer" class="link-text">Visit Site</a>
+                            <a href="https://chippercash.com" target="_blank" rel="noopener noreferrer" class="link-text">Visit Website</a>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                             </svg>
@@ -131,7 +131,7 @@
                                 </p>
                             </div>
                             <div class="project-link">
-                                <a href="https://www.chippercash.com/api" target="_blank" rel="noopener noreferrer" class="link-text">Read More</a>
+                                <a href="https://www.chippercash.com/api" target="_blank" rel="noopener noreferrer" class="link-text">API Website</a>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                                 </svg>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="project-text">
                                 <p>
-                                    When we needed to streamline our vendor costs, I led two critical redesigns of ChipperCash's KYC flow. First, replacing our third-party Veriface vendor with an in-house facial recognition model, saving the company over $800K annually. 
+                                    When we needed to streamline our vendor costs, I led two critical redesigns of Chipper Cash's KYC flow. First, replacing our third-party Veriface vendor with an in-house facial recognition model, saving the company over $800K annually. 
                                 </p>
                             </div>
                             <div class="project-image placeholder-image">
@@ -167,7 +167,7 @@
                             </p>
                             </div>
                             <div class="project-link">
-                                <a href="https://www.chippercash.com/blog/how-ai-is-revolutionizing-the-tech-industry-in-africa" target="_blank" rel="noopener noreferrer" class="link-text">Read More</a>
+                                <a href="https://www.chippercash.com/blog/how-ai-is-revolutionizing-the-tech-industry-in-africa" target="_blank" rel="noopener noreferrer" class="link-text">How We Did It</a>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                                 </svg>
@@ -179,7 +179,7 @@
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-heading">
-                                <h3>USD virtual accounts & payment links – powered $5M in global payments</h3>
+                                <h3>USD virtual accounts – powered $5M in global payments</h3>
                                 <div class="underline">
                                     <img src="http://localhost:3845/assets/d75d36230ba067897b231ea0a0c02647d3c29014.svg" alt="Underline">
                                 </div>
@@ -187,26 +187,21 @@
                             
                             <div class="divider"></div>
                             <div class="project-image placeholder-image">
-                                <img src="assets/payment links.gif" alt="USD Payment Links">
-                            </div>
-                            <div class="project-text">
-                                <p>
-                                    Today, millions of Nigerians lack easy access to receive international payments. I saw the opportunity and pitched an idea: launch USD virtual accounts bundled with USD payment links. This will give users U.S. bank details and an ability to simply request and receive money globally (in USD and stable coins).
-                                </p>
-                                <p>
-                                    The proposal was approved, and I led the rollout of this cross-border payments feature. It helped Chipper reposition as a platform for freelancers and creators not just peer-to-peer transfers.
-                                </p>
-                            </div>
-                            <div class="project-image placeholder-image">
                                 <img src="assets/usd va.gif" alt="USD Accounts">
                             </div>
                             <div class="project-text">
+                                <p>
+                                    Today, millions of Nigerians lack easy access to receive international payments. The USD VA will give users U.S. bank details and an ability to simply receive money globally in USD.
+                                </p>
+                                <p>
+                                    I led the design of this cross-border feature factoring in the regulatory requirements of the country and our business partners. This has helped Chipper reposition as a platform for freelancers and creators not just peer-to-peer transfers.
+                                </p>
                                 <p>
                                     Since launch, we've issued over 15,000 USD accounts, processed 20,000 payment links and $5M+ in transactions.
                                 </p>
                             </div>
                             <div class="project-link">
-                                <a href="https://www.chippercash.com/blog/introducing-chipper-cash-payment-links-a-seamless-way-to-receive-money" target="_blank" class="link-text">Read More</a>
+                                <a href="https://www.chippercash.com/blog/chipper-introduces-usd-account-open-instantly-get-paid-in-dollars-directly" target="_blank" class="link-text">Media Release</a>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                                 </svg>
@@ -214,7 +209,7 @@
                         </div>
                     </div>
 
-                    <!-- Project 4: Zambian Launch -->
+                    <!-- Project 4: Zambian Launch 
                     <div class="project-block">
                         <div class="project-content">
                             <div class="project-heading">
@@ -249,7 +244,7 @@
                                 </svg>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </main>
         </div>
