--- a/work-monks.html
+++ b/work-monks.html
@@ -98,7 +98,7 @@
                             gather requirements and create designs that redefined their goals.
                         </p>
                         <div class="project-link">
-                            <a href="https://www.monks.com/" target="_blank" rel="noopener noreferrer" class="link-text">Visit Site</a>
+                            <a href="https://www.monks.com/" target="_blank" rel="noopener noreferrer" class="link-text">Visit Website</a>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                             </svg>
@@ -123,22 +123,15 @@
                             </div>
                             <div class="project-text">
                                 <p>
-                                    As the sole designer on a 3-year project for a Fortune 500 client, I led the UX redesign of BDMS, an internal tool for requesting, monitoring and analyzing battery performance tests.
+                                    As the sole designer on a 3-year project for a Fortune 500 client, I led the UX redesign of BDMS, an internal tool for requesting, monitoring, and analyzing battery performance tests.
                                 </p>
                                 <p>
-                                    At the beginning of the project, we weren't allowed to speak to users, and early designs were based solely on internal assumptions and client knowledge of the tool.
-                                </p>
+                                    Since we couldn’t speak to users initially, early designs were based on assumptions. After releasing key features, I initiated a full discovery phase—interviews, remote shadowing, workshops, and knowledge sharing.</p>
                                 <p>
-                                    When we released some key features, I recognized the impact of this and led a full discovery
-                                    phase; conducting interviews, remote shadowing, knowledge sharing sessions and workshops to map the
-                                    end-to-end battery testing workflow.
-                                </p>
+                                    This uncovered user needs, aligned stakeholders, and inspired other PMs to adopt our approach.
+                                    The redesigned system streamlined workflows, simplified test setup, and made complex data easier to interpret.
                                 <p>
-                                    This led to a better understanding of our users and how they used the tool in their work. It also influenced how the client worked internally, other PMs within the product adopted our approach. We created a Battery Process Map, which aligned stakeholders, and uncovered some gaps. The redesigned system helped streamline workflows, simplify battery test setup, and made complex data easier to interpret.
-                                </p>
-                                <p>
-                                    The impact: battery cell and testengineers saved hundreds of hours annually, boosting confidence and productivity.
-                                    The team also delivered a scalable foundation for future innovation.
+                                    The impact: Hundreds of hours saved annually for engineers, boosting confidence and productivity and a scalable platform for future iteration and innovation.
                                 </p>
                                 <p>
                                     One engineer summed it up best:
@@ -190,7 +183,7 @@
                                 </p>
                             </div>
                             <div class="project-link">
-                                <a href="https://www.verizon.com/about/news/verizon-nvidia-power-ai-workloads-5g-private-networks-mec" target="_blank" class="link-text">Read More</a>
+                                <a href="https://www.verizon.com/about/news/verizon-nvidia-power-ai-workloads-5g-private-networks-mec" target="_blank" class="link-text">Verizon Official Release</a>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24" height="24" class="arrow-icon">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
                                 </svg>
