--- a/work-rxgo.html
+++ b/work-rxgo.html
@@ -94,7 +94,7 @@
                         </p>
                         <p class="project-description">
                             I was hired as a freelance designer to tackle this problem, tasked with creating a lightweight mobile
-                            app that helps Americans save money on their medications. My goal was to distill it into a simple,
+                            app that helps Americans save money on their medications. My goal was to break it down into a simple,
                             fast, and helpful mobile app.
                         </p>
                         <div class="project-link">
@@ -114,9 +114,8 @@
                             
                             <div class="project-text">
                                 <p>
-                                    This project was a deep dive into user experience, focusing on three core actions: searching for the
-                                    best price, finding coupons, and easily accessing saved deals. The experience had to be streamlined
-                                    and intuitive, even under the pressure of a time-sensitive pharmacy visit.
+                                    This project was focusing on three core actions: searching for the
+                                    best price, finding coupons, and easily accessing saved deals. 
                                 </p>
                                 <p>
                                     The solution was a clean and focused app design that put search and savings front and center. I focused heavily on simplifying each user flow to help people go from search to savings in a matter of seconds.
@@ -138,7 +137,9 @@
                                     positive reviews on the App Store.
                                 </p>
                                 <p>
-                                    As a designer coming from outside the U.S. healthcare system, this project was a valuable learning experience. I had to rely on stakeholder expertise and extensive competitor analysis to truly understand the space and its unique challenges. The most significant lesson I took away was to simplify, simplify, simplify—removing friction from key flows was the single most important factor in the project's success.
+                                    As a designer coming from outside the U.S. healthcare system, this project was a valuable learning experience. I had to rely on stakeholder expertise and extensive competitor analysis to truly understand the space and its unique challenges. 
+                                    <br>
+                                    The most significant lesson I took away was to simplify, simplify, simplify—removing friction from key flows was the single most important factor in the project's success.
                                 </p>
                             </div>
                         </div>
