--- a/work-monks.html
+++ b/work-monks.html
@@ -194,6 +194,15 @@
             </main>
         </div>
     </div>
+    
+    <!-- Image Modal/Lightbox -->
+    <div class="image-modal" id="imageModal">
+        <div class="image-modal-content">
+            <img id="modalImage" src="" alt="Expanded Image">
+            <button class="image-modal-close" onclick="closeImageModal()">&times;</button>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html> 
